--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+a{
+  font-family: 'Crimson Pro', serif;
+  font-family: 'Changa', sans-serif;
+  font-size: 20px;
+}
