--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,29 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #6c757d;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -25,4 +48,67 @@ a{
 }
 .logo{
   color: rebeccapurple;
+}
+.parent-div{
+  display: flex;
+  flex-direction: row;
+  margin-top:13%;
+}
+#header-img{
+  animation: updown 1s ease-in-out infinite alternate-reverse both;
+  margin-left: 5%;
+  width: 400px;
+}
+
+#blue-text{
+  color: var(--blue);
+
+}
+button{
+  background-color: var(--indigo);
+  border: 1px solid var(--indigo);
+  color: var(--white);
+  border-radius: 10px;
+}
+@media only screen and (max-width:576px){
+  .parent-div{
+    display: block;
+  }
+  #header-img{
+    margin-left: 0%;
+  }
+}
+@media only screen and (max-width:768px){
+  #header-img{
+    width: 300px;
+
+  }
+}
+
+@media only screen and (max-width:650px){
+  .parent-div{
+    display: block;
+  }
+  #header-img{
+    margin-left: 0%;
+  }
+
+}
+@keyframes updown{
+  0%{
+    transform: translate(10px);
+    
+  }
+  100%{
+    transform: translate(-10px);
+  }
+}
+
+@-webkit-keyframes updown{
+  0%{
+    transform: translate(10px);
+  }
+  100%{
+    transform: translate(-10px);
+  }
 }
